<resources>
    <string name="app_name">Auto škola Božičković</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="onama_tekst">Auto škola ""Božičković"" je auto škola koja svoje usluge pruža još od 2008 godine.
    \n\nPružamo širok spektar kategorija za polagenje. Isto tako imamo i sjajan tim iskusnih instruktora koji iza sebe imaju godine iskustva kako kao instruktori tako i kao samostalni vozači.
Naša misija je da obučimo buduće vozače kako da se ponašaju u saobraćaju i da budu svijesni šta sve čini saobraćaj.
    \n\nVjerujemo da imamo najbolji kvalitet, najveći spektar usluga uz prihvatljivu cenu.</string>
    <string name="lista_instruktora">- Željko Božičković | 065 566 600
        \n- Mira Božičković | 065 619 737
        \n- Dejan Božičković | 066 793 435
    </string>
    <string name="aggressiveclick_footer">Aplikacija podržana od Aggressive Click\ncontact@aggressiveclick.com | +387 66 631 930</string>

    <string name="kategorija_a_text">Kategorija A</string>
    <string name="kategorija_b_text">Kategorija B</string>
    <string name="kategorija_c_text">Kategorija C</string>

    <string name="teorija_test_desc_text">Ovaj test se sastoji od 20 nasumično izabranih teorijskih pitanja.</string>
    <string name="znakovi_test_desc_text">Ovaj test se sastoji od 20 nasumično izabranih saobraćajnih znakova.</string>
    <string name="raskrsnice_test_desc_text">Ovaj test se sastoji od 20 nasumično izabranih saobraćajnih raskrsnica.</string>
    <string name="probni_test_desc_text">Ovaj test se sastoji od teorijskih pitanja, saobraćajnih znakova i saobraćajnih raskrsnica.</string>
    <string name="provjeri_odgovor_text">Provjeri odgovor</string>
    <string name="nastavi_text">Nastavi</string>

    <string name="kategorija_text">Kategorija: %1$s</string>
    <string name="broj_pitanja_text">Ukupan broj pitanja: %1$d</string>
    <string name="tacnih_odgovora_text">Tačno odgovorenih pitanja: %1$d</string>

    <string name="postotak_bodovi_text">%1$d/%2$d | %3$.2f %%</string>
    <string name="pitanje_count_text">Pitanje %1$d/%2$d</string>

    <string name="prosao_ispit_text">POLOŽILI STE TEST</string>
    <string name="pao_ispit_text">PALI STE TEST</string>
    <string name="contact_fragment_location_text">Lokacija:\nUlica Srpskih sokolova, Doboj</string>


</resources>