<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SelectTestFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/test_teorije_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        style="@style/CardViewStroke"
        android:layout_margin="12dp"
        app:contentPadding="9dp"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MaterialTextButton"
                android:text="Teorijski test"
                android:fontFamily="@font/manrope_extrabold"
                app:icon="@drawable/kategorije_icon"
                app:iconSize="28dp"
                app:iconTint="@color/blue"/>


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/teorija_test_desc_text"
                android:fontFamily="@font/manrope_regular"
                android:layout_marginTop="6dp"
                android:textSize="16sp"/>

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/test_znakova_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/test_teorije_container"
        style="@style/CardViewStroke"
        android:layout_margin="12dp"
        app:contentPadding="9dp"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MaterialTextButton"
                android:text="Test znakova"
                android:fontFamily="@font/manrope_extrabold"
                app:icon="@drawable/znak_icon"
                app:iconSize="28dp"
                app:iconTint="@color/red"/>


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/znakovi_test_desc_text"
                android:fontFamily="@font/manrope_regular"
                android:layout_marginTop="6dp"
                android:textSize="16sp"/>

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/test_raskrnice_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/test_znakova_container"
        style="@style/CardViewStroke"
        android:layout_margin="12dp"
        app:contentPadding="9dp"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MaterialTextButton"
                android:text="Test raskrsnica"
                android:fontFamily="@font/manrope_extrabold"
                app:icon="@drawable/semafor_icon"
                app:iconSize="28dp"
                app:iconTint="@color/green"/>


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/raskrsnice_test_desc_text"
                android:fontFamily="@font/manrope_regular"
                android:layout_marginTop="6dp"
                android:textSize="16sp"/>

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/test_probni_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/test_raskrnice_container"
        style="@style/CardViewStroke"
        android:layout_margin="12dp"
        app:contentPadding="9dp"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MaterialTextButton"
                android:text="Probni test"
                android:fontFamily="@font/manrope_extrabold"
                app:icon="@drawable/car_icon_second"
                app:iconSize="28dp"
                app:iconTint="@color/yellow"/>


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/probni_test_desc_text"
                android:fontFamily="@font/manrope_regular"
                android:layout_marginTop="6dp"
                android:textSize="16sp"/>

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>